# context-delta

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  context-delta-0.0.5.tgz  eslint.config.js  main.py  package-lock.json  package.json  plan.md  pyproject.toml  tsconfig.build.json  tsconfig.json  tsup.config.ts
.github/workflows/: node-ci.yml
context-delta/: AGENTS.md  project.md
context-delta/promptcards/: README.md  api-spec.md  architecture-design.md  behavior-spec.md  data-spec.md  delivery-plan.md  model-spec.md  module-design.md  product-requirements.md  system-requirements.md
context-delta/prompts/: delta-archive.md  delta-propose.md  delta-roadmap.md  delta-update.md  delta-verify.md
docs/: analysis.md  concept.md  context-delta-architecture-doc_type-promptcard.md  context-delta-files.md  context-delta-guideline-1.md  context-delta-guideline-2.md  context-delta-operations-checklist.md  context-delta-prompt-fix-plan.md  deltacontext.md  generation.md  npm-architecture.md  npm-release.md  npm_migration_requirements.md  proactive-delta-context.md  prompt_review.md  promptcard.md
docs/promptcards/: registry.json  registry.md
docs/releases/: v0.0.5-node-cli.md
specline/: AGENTS.md  project.md
specline/prompts/: specline-apply.md  specline-archive.md  specline-concept.md  specline-propose.md  specline-roadmap.md  specline-update.md
src/: types.ts
src/commands/: README.md
src/context_delta/: __init__.py  cli.py  scaffold.py
src/services/: README.md  assistants.ts  context.ts  (+4 more)
templates/: README.md  directory.json
tests/: test_cli_init.py
(+48 files in other folders)
