[project]
name = "team-pal-prompts"
version = "0.1.0"
description = "palprompt CLI for managing pal/ OpenSpec workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
palprompt = "team_pal_prompts.cli:main"
