[project]
name = "context-delta"
version = "0.0.5"
description = "Context Delta CLI for managing context-delta/ OpenSpec workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
delta = "context_delta.cli:main"
context-delta = "context_delta.cli:main"
